@@ -161,8 +161,10 @@ class DLM_Backwards_Compatibility {
 		}
 
 		$this->filters = $filters;
-		add_filter( 'dlm_admin_sort_columns', array( $this, 'query_args_download_count_compatibility' ), 60 );
-		add_filter( 'dlm_query_args_filter', array( $this, 'query_args_download_count_compatibility' ), 60 );
+	// @todo: Think the below filters are not useful anymore as we changed the SQL query.
+	//	add_filter( 'dlm_admin_sort_columns', array( $this, 'query_args_download_count_compatibility' ), 60 );
+	//	add_filter( 'dlm_query_args_filter', array( $this, 'query_args_download_count_compatibility' ), 60 );
+	
 		// @todo: delete this filter and function after feedback, as version 4.7.0 doesn't need it.
 		// add_filter( 'posts_where', array( $this, 'where_download_count_compatibility' ) );
 		add_filter( 'posts_groupby', array( $this, 'groupby_download_count_compatibility' ) );
